--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
 
+- 
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>At What Temperature Do Pipes Freeze in Shingle Springs | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Learn the factors affecting pipe freezing in Shingle Springs, CA, and how to prevent damage during cold weather. Expert plumbing tips and solutions.">
+  <meta name="geo.position" content="38.6737;-120.8011">
+  <meta name="geo.placename" content="Shingle Springs, California">
+  <meta name="geo.region" content="US-CA">
+</head>
+<body>
+<header>
+  <h1>At What Temperature Do Pipes Freeze in Shingle Springs</h1>
+  <p>Technical Overview for Shingle Springs Residents</p>
+</header>
+
+<main id="main">
+  <article>
+
+    <section>
+      <h2>Introduction</h2>
+      <p>The temperature at which pipes freeze in Shingle Springs, CA, is influenced by several factors such as pipe material, insulation, and external environmental conditions. Freezing temperatures can cause significant damage to plumbing systems, particularly in older homes where insulation may be inadequate. This guide explains what temperature pipes freeze at, common causes, and how to prevent such issues in Shingle Springs.</p>
+    </section>
+
+    <section>
+      <h2>Key Terminology</h2>
+      <dl>
+        <dt>Pipe Freeze Point</dt>
+        <dd>The temperature at which water inside pipes freezes, typically around 32°F (0°C) but can vary based on insulation and water flow.</dd>
+        <dt>Insulation</dt>
+        <dd>Material used to reduce heat transfer, often applied to pipes to prevent freezing during cold temperatures.</dd>
+        <dt>Hydro Jetting</dt>
+        <dd>A method of cleaning pipes using high-pressure water to remove blockages and prevent future freezing by maintaining clear flow.</dd>
+        <dt>Trenchless Technology</dt>
+        <dd>A method for replacing or repairing pipes without digging, minimizing disruption to property during plumbing work.</dd>
+      </dl>
+    </section>
+
+    <section>
+      <h2>Process & Diagnostics</h2>
+      <p>Preventing frozen pipes involves several diagnostic steps, including identifying vulnerable areas in the plumbing system and applying targeted insulation. The process starts with evaluating the pipe materials and external temperature, followed by detecting weak spots using advanced technology such as camera inspections. If frozen pipes are found, solutions like hydro jetting or trenchless technology may be used to resolve the issue.</p>
+
+      <svg role="img" aria-labelledby="pipeFreezeTitle" width="400" height="300">
+        <title id="pipeFreezeTitle">Pipe Freezing Prevention Process</title>
+        <desc>Diagram showing the steps to prevent pipes from freezing: Inspection, Insulation, and Repair.</desc>
+        <rect x="50" y="50" width="300" height="200" stroke="black" fill="none" />
+        <line x1="50" y1="50" x2="350" y2="50" stroke="black" />
+        <line x1="50" y1="50" x2="50" y2="250" stroke="black" />
+        <line x1="350" y1="50" x2="350" y2="250" stroke="black" />
+        <line x1="50" y1="250" x2="350" y2="250" stroke="black" />
+        <text x="100" y="120" font-family="Arial" font-size="14">Inspection</text>
+        <text x="100" y="170" font-family="Arial" font-size="14">Insulation</text>
+        <text x="100" y="220" font-family="Arial" font-size="14">Repair</text>
+      </svg>
+
+    </section>
+
+    <section>
+      <h2>Technical Standards & Local Context</h2>
+      <p>In Shingle Springs, plumbing systems must meet local regulations that ensure resilience during winter months. For official plumbing and building codes, refer to the El Dorado County Building Department’s standards for infrastructure, water systems, and plumbing practices.  
+      <a href="https://www.edcgov.us/Government/building" target="_blank" rel="noopener noreferrer">El Dorado County Building Department</a></p>
+    </section>
+
+    <section>
+      <h2>Cost & Complexity Factors</h2>
+      <table>
+        <caption>Factors Affecting Plumbing System Complexity and Cost</caption>
+        <thead>
+          <tr>
+            <th>Factor</th>
+            <th>Description</th>
+            <th>Impact on Complexity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Pipe Material</td>
+            <td>Different materials (e.g., PVC, copper) have varying freeze resistance.</td>
+            <td>Moderate</td>
+          </tr>
+          <tr>
+            <td>Insulation Quality</td>
+            <td>Better insulation reduces the risk of pipe freezing.</td>
+            <td>High</td>
+          </tr>
+          <tr>
+            <td>Location</td>
+            <td>Pipes in colder areas of the home are more vulnerable.</td>
+            <td>High</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h2>Common Questions (FAQ)</h2>
+      <dl>
+        <dt>What temperature do pipes freeze in Shingle Springs?</dt>
+        <dd>In Shingle Springs, pipes typically freeze when temperatures drop below 32°F, but the risk increases based on factors like pipe material and insulation quality.</dd>
+        <dt>How can I prevent my pipes from freezing?</dt>
+        <dd>To prevent frozen pipes, you should insulate exposed pipes, ensure proper ventilation, and regularly check your plumbing system during winter months.</dd>
+        <dt>What should I do if my pipes freeze?</dt>
+        <dd>If your pipes freeze, immediately turn off the water supply and seek professional help to safely thaw the pipes and repair any damage.</dd>
+      </dl>
+    </section>
+
+  </article>
+</main>
+
+<footer>
+  <p>© 2026 Murray Plumbing · Serving Shingle Springs, California</p>
+</footer>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Plumber",
+  "@id": "https://murrayplumbing.net/#murray-plumbing-shingle-springs-at-what-temperature-do-pipes-freeze-in-shingle-springs",
+  "inLanguage": "en-US",
+  "name": "Murray Plumbing",
+  "description": "Learn the factors affecting pipe freezing in Shingle Springs, CA, and how to prevent damage during cold weather. Expert plumbing tips and solutions.",
+  "areaServed": "Shingle Springs, California",
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 38.6737,
+    "longitude": -120.8011
+  },
+  "serviceArea": {
+    "@type": "GeoCircle",
+    "geoMidpoint": {
+      "@type": "GeoCoordinates",
+      "latitude": 38.6737,
+      "longitude": -120.8011
+    },
+    "geoRadius": 15000
+  },
+  "knowsAbout": [
+    "Pipe Freezing",
+    "Plumbing Diagnostics",
+    "Hydro Jetting",
+    "Water Heater Services",
+    "Sewer Repair"
+  ],
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "name": "At What Temperature Do Pipes Freeze in Shingle Springs"
+      }
+    ]
+  },
+  "sameAs": [
+    "https://sites.google.com/view/plumbershinglesprings/at-what-temperature-do-pipes-freeze-in-shingle-springs",
+    "https://www.murrayplumbing.net/pipe-freeze-temperature-shingle-springs-ca-murray-plumbing/"
+  ],
+  "citation": "https://www.edcgov.us/Government/building"
+}
+</script>
+</body>
+</html>
